--- a/.prettierrc
+++ b/.prettierrc
@@ -1,33 +1,31 @@
 {
   "arrowParens": "always",
+  "bracketSameLine": false,
+  "objectWrap": "preserve",
   "bracketSpacing": true,
-  "cursorOffset": -1,
-  "endOfLine": "auto",
-  "filepath": "",
+  "semi": true,
+  "experimentalOperatorPosition": "end",
+  "experimentalTernaries": false,
+  "singleQuote": false,
+  "jsxSingleQuote": false,
+  "quoteProps": "as-needed",
+  "trailingComma": "all",
+  "singleAttributePerLine": false,
   "htmlWhitespaceSensitivity": "css",
+  "vueIndentScriptAndStyle": false,
+  "proseWrap": "preserve",
   "insertPragma": false,
-  "jsxBracketSameLine": false,
-  "jsxSingleQuote": true,
+  "printWidth": 180,
+  "requirePragma": false,
+  "tabWidth": 2,
+  "useTabs": false,
+  "embeddedLanguageFormatting": "auto",
   "overrides": [
     { "files": "*.md", "options": { "parser": "markdown" } },
     { "files": "*.css", "options": { "parser": "css" } },
     { "files": "*.js", "options": { "parser": "babel" } },
+    { "files": "*.html", "options": { "parser": "html" } },
     { "files": "*.json", "options": { "parser": "json" } },
-    { "files": ".eslintrc", "options": { "parser": "json" } },
-    { "files": ".stylelintrc", "options": { "parser": "json" } },
     { "files": ".prettierrc", "options": { "parser": "json" } }
-  ],
-  "plugins": [],
-  "pluginSearchDirs": [],
-  "printWidth": 120,
-  "proseWrap": "preserve",
-  "quoteProps": "as-needed",
-  "rangeStart": 0,
-  "requirePragma": false,
-  "semi": true,
-  "singleQuote": true,
-  "tabWidth": 2,
-  "trailingComma": "es5",
-  "useTabs": false,
-  "vueIndentScriptAndStyle": false
+  ]
 }
