--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,9 +5,18 @@
   "description": "新增右键菜单：将Chrome网上应用店链重定向至镜像链接",
   "author": "gaojr",
   "homepage_url": "https://github.com/gaojr/chrome-web-store-redirector",
-  "permissions": ["contextMenus"],
+  "permissions": ["contextMenus", "storage"],
   "background": {
     "service_worker": "background.js"
+  },
+  "action": {
+    "default_popup": "popup.html",
+    "default_title": "点击打开设置面板",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    }
   },
   "icons": {
     "16": "icons/icon16.png",
